welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: not found: value bOk
	} else if (bOk && (a<b || a==b) && (b<c || b==c) ) { 
                   ^