welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	if (a<b && b<c && equalOk==false) {
		return true
	} else if (bOk && (a<b || a==b) && (b<c || b==c) ) { 
		return true
	} else { 
		return false
	}
}
